feat: more empire creation tooltip improvements and restrictions

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -8,6 +8,7 @@
 	TEC_TAG_RESTRICTION_MECHANIC: "§RMechanic Restriction:§!"
 	TEC_TAG_RESTRICTION_RIGHTS: "§RRights Restriction:§!"
 	TEC_TAG_PENALTY: "§RPenalty:§!"
+	TEC_TAG_AUTHORITY_SWAP: "§HAuthority Swap:§!"
 	TEC_TAG_BONUS_EDICT: "§HEdict Bonus:§!"
 	TEC_TAG_BONUS_POLICY: "§HPolicy Bonus:§!"
 	TEC_TAG_BONUS_LIVING_STANDARD: "§HLiving Standard:§!"
@@ -23,7 +24,8 @@
 	TEC_TAG_RESTRICTION_AUTOCRATIC_OLIGARCHIC_AUTH_TYPES: "$TEC_TAG_RESTRICTION_AUTH_TYPES$ Cannot use ['concept_tec_authority_type_autocratic'] and ['concept_tec_authority_type_oligarchic'] Type government forms."
 	TEC_TAG_RESTRICTION_IMPERIAL_AUTH_TYPES: "$TEC_TAG_RESTRICTION_AUTH_TYPES$ Cannot use ['concept_tec_authority_type_imperial'] Type government forms."
 	TEC_TAG_RESTRICTION_CORPORATE_AUTH_TYPES: "$TEC_TAG_RESTRICTION_AUTH_TYPES$ Cannot use ['concept_tec_authority_type_corporate'] Type government forms."
-	TEC_ETHIC_REQUIRES_GESTALT_AUTH_TYPES: "$TEC_TAG_RESTRICTION_AUTH_TYPES$ Require the use of ['concept_tec_authority_type_gestalt'] Type government forms."
+	TEC_TAG_REQUIRES_GESTALT_AUTH_TYPES: "$TEC_TAG_RESTRICTION_AUTH_TYPES$ Require the use of ['concept_tec_authority_type_gestalt'] Type government forms."
+
 
 	TEC_TAG_BONUS_FEDERATION_MARTIAL:0 "$TEC_TAG_BONUS_FEDERATION$ Can use ['concept_military_federation'] Federation Type"
 	TEC_TAG_BONUS_FEDERATION_HEGEMONY:0 "$TEC_TAG_BONUS_FEDERATION$ Can use ['concept_hegemony_federation'] Federation Type"
@@ -31,14 +33,18 @@
 	TEC_TAG_BONUS_FEDERATION_RESEARCH:0 "$TEC_TAG_BONUS_FEDERATION$ Can use ['concept_research_federation'] Federation Type"
 	TEC_TAG_BONUS_FEDERATION_TRADE:0 "$TEC_TAG_BONUS_FEDERATION$ Can use ['concept_trade_federation'] Federation Type"
 
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_AUTOCRATIC_TYPE: "Does NOT block §Y$concept_tec_authority_type_autocratic_type$§!"
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_OLIGARCHIC_TYPE: "Does NOT block §Y$concept_tec_authority_type_oligarchic_type$§!"
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_DEMOCRATIC_TYPE: "Does NOT block §Y$concept_tec_authority_type_democratic_type$§!"
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_IMPERIAL_TYPE: "Does NOT block §Y$concept_tec_authority_type_imperial_type$§!"
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_DICTATORIAL_TYPE: "Does NOT block §Y$concept_tec_authority_type_dictatorial_type$§!"
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_CORPORATE_TYPE: "Does NOT block §Y$concept_tec_authority_type_corporate_type$§!"
-	CONDITION_TEC_ETHIC_NOT_BLOCKS_AI_AUTH_TYPE: "Does NOT block §Y$concept_tec_authority_type_ai_auth_type$§!"
-# / 
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_AUTOCRATIC_TYPE: "Does NOT block ['concept_tec_authority_type_autocratic_type']"
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_OLIGARCHIC_TYPE: "Does NOT block ['concept_tec_authority_type_oligarchic_type']"
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_DEMOCRATIC_TYPE: "Does NOT block ['concept_tec_authority_type_democratic_type']"
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_IMPERIAL_TYPE: "Does NOT block ['concept_tec_authority_type_imperial_type']"
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_DICTATORIAL_TYPE: "Does NOT block ['concept_tec_authority_type_dictatorial_type']"
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_CORPORATE_TYPE: "Does NOT block ['concept_tec_authority_type_corporate_type']"
+	CONDITION_TEC_ETHIC_NOT_BLOCKS_AI_AUTH_TYPE: "Does NOT block ['concept_tec_authority_type_ai_auth_type']"
+
+	origin_legendary_leader_no_gov_change:0 "Can't change Authority with ['civic:origin_legendary_leader'] Origin"
+
+
+	# /
 
 
 	auth_direct_democratic:0 "Direct Democracy"
@@ -229,6 +235,9 @@
 	TEC_TAG_EGALITARIAN_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_encourage_free_thought_alias_icon'] Edict"
 	TEC_TAG_EGALITARIAN_BONUS_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ TO DO"
 
+	TEC_TAG_FANATIC_EGALITARIAN_SWAP_AUTHORITY: "$TEC_TAG_AUTHORITY_SWAP$ ['authority:auth_democratic'] is replaced by ['authority:auth_democratic:auth_direct_democratic'] Authority"
+	TEC_TAG_EGALITARIAN_AND_PLURALIST_SWAP_AUTHORITY: "$TEC_TAG_AUTHORITY_SWAP$ With ['ethic:ethic_pluralist'], ['authority:auth_democratic'] is replaced by ['authority:auth_democratic:auth_direct_democratic'] Authority"
+
 	# Auth
 	ethic_authoritarian:1 "Authoritarian"
 	ethic_authoritarian_plural:0 "Authoritarians"
@@ -289,7 +298,7 @@
 
 	TEC_TAG_XENOPHILE_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_land_of_opportunity_alias_icon'] Edict"
 	TEC_TAG_XENOPHILE_BONUS_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ TO DO"
-	TEC_TAG_XENOPHILE_BONUS_OPINION: "$TEC_TAG_BONUS$ Increased §HOpinion§! for other species"  
+	TEC_TAG_XENOPHILE_BONUS_OPINION: "$TEC_TAG_BONUS$ Increased §Y£opinion£ Opinion§! for other species"
 
 
 	# Mil
@@ -507,6 +516,8 @@
 	TEC_TAG_FANATIC_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a §YModerate§! amount of §YMonthly Experience§!. Non active leaders gain double the amount"
 	TEC_TAG_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+1§! §Y$tec_loc_all_leaders$ Leader capacity§! of a specific leader type via policy."
 	TEC_TAG_FANATIC_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+2§! §Y$tec_loc_all_leaders$ Leader capacity§! of a specific leader type via policy."
+	TEC_TAG_PLURALIST_AND_EGALITARIAN_SWAP_AUTHORITY: "$TEC_TAG_AUTHORITY_SWAP$ With ['ethic:ethic_egalitarian'], ['authority:auth_democratic'] is replaced by ['authority:auth_democratic:auth_direct_democratic'] Authority"
+
 
 	# Not added
 	ethic_individualist_desc:1 "§LEveryone is equal in basic dignity and rights. The preservation of order, while an admirable goal, does not justify tyranny and oppression either in principle or in practice. Civilization flourishes best when the few do not dominate the many.§!\n"
@@ -528,9 +539,12 @@
 	TEC_ETHIC_GESTALT_CONSCIOUSNESS_NO_FACTIONS:0 "§ENative Pops are generally not affected by §HHappiness§! and will not join standard §HFactions§!§!"
 	TEC_ETHIC_GESTALT_CONSCIOUSNESS_DOMESTIC_POP_SURVIVAL:0 "§ENative Pops can not survive in non-§HGestalt§! or §HXenophile§! empires§!"
 
-	TEC_ETHIC_GESTALT_LIVING_STANDARD:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Native pops belong to the ['concept_tec_living_standard_hive_mind_alias_icon'] Living Standards and do not require £consumer_goods£ §YConsumer Goods§!"
+	TEC_TAG_GESTALT_CONSCIOUSNESS_NATIVE_POPS: "$TEC_TAG_BONUS_MECHANIC$\n- Native £pop£ Pops are generally not affected by §Y$tec_loc_happiness$§! and will not join or form §YFactions§!\n- Native £pop£ Pops can not survive in non-['ethic:ethic_gestalt_consciousness'] Empires"
+
+
+	TEC_TAG_GESTALT_LIVING_STANDARD:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Native pops belong to the ['concept_tec_living_standard_hive_mind_alias_icon'] Living Standards and do not require £consumer_goods£ §YConsumer Goods§!"
 	#TEC_ETHIC_GESTALT_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_equal_opportunities'] Edict"
-	TEC_ETHIC_GESTALT_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Rulers are §YImmortal§!, and provide gestalt leaders with §YMonthly Experience§! based on its §YLevel§!"
+	TEC_TAG_GESTALT_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Rulers are §YImmortal§!, and provide gestalt leaders with §YMonthly Experience§! based on its §YLevel§!"
 
 
 #phile
@@ -598,27 +612,35 @@
 #phile
 	#REWORKED GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EAllows §HMigration pacts§! with regular empires or other §HEmpathic Gestalts§!§!"
 	GESTALT_ETHIC_STARTS_WITH_FRIENDSHIP:0 "§EUnlocks the §HEmpathic Friendship§! technology; this technology allows both gaining non-hivemind organic pops and producing Consumer Goods.§!"
-	GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EMay randomly gain a £pops£ §HNon gestalt pop§! from empires with good relations or in the same Federation, if the empire can £consumer_goods£ sustain that population.§!"
+	GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EMay randomly gain a £pops£ §HNon gestalt pop§! from empires with good relations or in the same Federation, but they might require §Y$tec_loc_consumer_goods$§! to be sustained.§!"
+
+	TEC_TAG_GESTALT_EMPATHY_BONUS_FRIENDSHIP: "$TEC_TAG_BONUS_MECHANIC$\n- Access to the ['technology:tech_tec_gestalt_friendship'] Technology.\n- With this technology, you may randomly gain a non-['ethic:ethic_gestalt_consciousness'] §Y£pop£ Pop§! from empires with good relations or in the same Federation, if the empire can §Y$tec_loc_consumer_goods$§! sustain that population."
+
 	GESTALT_ETHIC_EMPATHY:0 "§EReduces the £opinion£ Opinion penalty Gestalt consciousness normally have with other empires.§!"
+	TEC_TAG_GESTALT_EMPATHY_BONUS_OPINION: "$TEC_TAG_BONUS$ Gain §G+50§! §Y£opinion£ Opinion§! with non-['ethic:ethic_gestalt_consciousness'] Empires, countering the normal penalty."
 
 #phobe
 	GESTALT_ETHIC_ALLOWS_LETMEALONE:0 "§EMost of the diplomatic actions are not available for this empire.§!"
+	TEC_TAG_GESTALT_APATHY_PENALTY: "$TEC_TAG_PENALTY$ Most of the diplomatic actions are not available for this empire."
 	# "§EThis empire can't engage in basic or advanced diplomacy.§!"
 
 #Eco
-	GESTALT_ETHIC_ALLOWS_NATURALIZATION:0 "§EActs as a ['concept_tec_terraformer_civic'], giving access to ['concept_tec_decision_tec_environment_enhance_icon'] and ['concept_tec_decision_tec_environment_preserve_icon'] decisions§!"
+	GESTALT_ETHIC_ALLOWS_NATURALIZATION:0 "§EActs as a ['concept_tec_terraformer_civic'], giving access to ['concept_tec_decision_tec_environment_enhance_icon'] and ['concept_tec_decision_tec_environment_preserve_icon'] Decisions§!"
+	TEC_TAG_PRESERVATION_BONUS_TERRAFORMER: "$TEC_TAG_BONUS_MECHANIC$\n- Behaves like a ['concept_tec_terraformer_civic'], but does not block the selection of civics from this group.\n- Can use ['concept_tec_decision_tec_environment_enhance_icon'] and ['concept_tec_decision_tec_environment_preserve_icon'] Decisions."
 	GESTALT_ETHIC_ALLOWS_WORLD_SHAPER:0 "§EAllows §HWorld Shaper§! Ascension Perk§!"
+	TEC_TAG_PRESERVATION_BONUS_AP_ACCESS: "$TEC_TAG_BONUS$ Allows ['ascension_perk:ap_world_shaper'] Ascension Perk"
 #Industry
 	GESTALT_ETHIC_ALLOWS_STRIPMINING:0 "§EAllows §HOverstripping§! Decisions on planets§!"
-
+	TEC_TAG_GESTALT_OVERCONSUMPTION_BONUS_OVERSTRIPPING: "$TEC_TAG_BONUS$ Can use ['concept_tec_decision_tec_environment_overstrip_icon']"
 
 #Intro
 	GESTALT_ETHIC_ALLOWS_INTROSPECTION:0 "§EUnlocks §HIntrospection§! Policies§!"
 	GESTALT_ETHIC_ALLOWS_INTROSPECTION_NEW:0 "§EEach £building£ §HUnity Building§! decrease £pop_cat_complex_drone£ §HDrone Upkeep§!§!"
+	TEC_TAG_GESTALT_INTROSPECTIVE_BONUS_BUILDING: "$TEC_TAG_BONUS_MECHANIC$ Each £building£ §YUnity Building§! decreases £pop_cat_complex_drone£ §YDrone Upkeep§!"
 #Extro
 	GESTALT_ETHIC_ALLOWS_CURIOSITY:0 "§EAllows §HCuriosity§! Special projects§!"
 	GESTALT_ETHIC_ALLOWS_CURIOSITY_NEW:0 "§EEach £building£ §HResearch Building§! provide a small amount of £amenities_no_happiness£ §HAmenities§!§!"
-
+	TEC_TAG_GESTALT_EXTROSPECTIVE_BONUS_BUILDING: "$TEC_TAG_BONUS_MECHANIC$ Each £building£ §YResearch Building§! provide a small amount of §Y$tec_loc_amenities_gestalt$§!"
 
 # Fe ethics
 	ethic_tec_fe_ego:0 "Ancient Ego"
@@ -1006,9 +1028,9 @@
 
  # Gestalt ethics localisation
 	requires_actor_not_overconsumption_gestalt:0 "$TRIGGER_FAIL$§RUndoing this extensive §YOverstripping§! work is illogical to us§!"
-	TEC_NOT_DEFAULT_EMPIRE_ETHICS:0 "Does NOT have §YRegular§! empire ethics"
+	TEC_NOT_DEFAULT_EMPIRE_ETHICS:0 "Does NOT have ['concept_tec_regular_ethics']"
 
-	TEC_NOT_GESTALT_ETHICS:0 "Does NOT have §YGestalt§! empire ethics"
+	TEC_NOT_GESTALT_ETHICS:0 "Does NOT have ['concept_tec_gestalt_ethics']"
 
 
 
