--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2,11 +2,11 @@
 # Authority Types
 	concept_tec_authority_type_democratic: "Democratic"
 	concept_tec_authority_type_democratic_type: "Democratic Type"
-	concept_tec_authority_type_democratic_desc: "Democratic type authorities are usually characterized by a short election term, formed by the whole population/eligible members, through elected representatives.\n\nAuthorities:\n- ['authority:auth_direct_democratic']\n- ['authority:auth_democratic']"
+	concept_tec_authority_type_democratic_desc: "Democratic type authorities are usually characterized by a short election term, formed by the whole population/eligible members, through elected representatives.\n\nAuthorities (and subtypes):\n- ['authority:auth_democratic']\n$t$- ['authority:auth_democratic:auth_direct_democratic']\n\n§RBlocked by:§!\n- ['ethic:ethic_authoritarian'] Ethic\n- ['ethic:ethic_fanatic_authoritarian'] Ethic"
 
 	concept_tec_authority_type_oligarchic: "Oligarchic"
 	concept_tec_authority_type_oligarchic_type: "Oligarchic Type"
-	concept_tec_authority_type_oligarchic_desc: "Oligarchic type Authorities are usually characterized by a lengthy election term, but not life long one, and where a small group of people controlling most power.\n\nAuthorities:\n- ['authority:auth_oligarchic']\n- ['authority:auth_corporate']"
+	concept_tec_authority_type_oligarchic_desc: "Oligarchic type Authorities are usually characterized by a lengthy election term, but not life long one, and where a small group of people controlling most power.\n\nAuthorities:\n- ['authority:auth_oligarchic']\n- ['authority:auth_corporate']\n\n§RBlocked by:§!\n- ['ethic:ethic_fanatic_authoritarian'] Ethic\n- ['ethic:ethic_fanatic_egalitarian'] Ethic"
 
 	concept_tec_authority_type_dictatorial: "Dictatorial"
 	concept_tec_authority_type_dictatorial_type: "Dictatorial Type"
@@ -18,7 +18,7 @@
 
 	concept_tec_authority_type_autocratic: "Autocratic"
 	concept_tec_authority_type_autocratic_type: "Autocratic Type"
-	concept_tec_authority_type_autocratic_desc: "Autocratic type authorities are usually characterized by a figure that rules for life, be it elected or hereditary, the ruler having unlimited authority.\n\nAuthorities:\n- ['authority:auth_dictatorial']\n- ['authority:auth_tec_theocracy']\n- ['authority:auth_imperial']\n- ['authority:auth_tec_patrocorporate']"
+	concept_tec_authority_type_autocratic_desc: "Autocratic type authorities are usually characterized by a figure that rules for life, be it elected or hereditary, the ruler having unlimited authority.\n\nAuthorities:\n- ['authority:auth_dictatorial']\n- ['authority:auth_tec_theocracy']\n- ['authority:auth_imperial']\n- ['authority:auth_tec_patrocorporate']\n\n§RBlocked by:§!\n- ['ethic:ethic_egalitarian'] Ethic\n- ['ethic:ethic_fanatic_egalitarian'] Ethic"
 
 	concept_tec_authority_type_corporate: "Corporate"
 	concept_tec_authority_type_corporate_type: "Corporate Type"
@@ -217,6 +217,14 @@
 	concept_tec_dystopian_society_civic_desc: "$concept_tec_dystopian_society_civic$ Civics consist of \n- ['civic:civic_dystopian_society']$NEW_LINE$- ['civic:civic_tec_corporate_dystopian_society']"
 
 
+	concept_tec_regular_ethic: "Regular Ethic"
+	concept_tec_regular_ethics: "Regular Ethics"
+	concept_tec_regular_ethic_desc: "$concept_tec_regular_ethics$ are ethics that non gestalt consciousness empires have, empires like ['authority:auth_democratic'] or ['authority:auth_imperial'] empires, being mutually exclusive with ['concept_tec_gestalt_ethics'].\n\n$concept_tec_regular_ethics$ consist of\n- ['ethic:ethic_authoritarian'] (and Fanatic variant)\n- ['ethic:ethic_egalitarian'] (and Fanatic variant)\n- ['ethic:ethic_pacifist'] (and Fanatic variant)\n- ['ethic:ethic_militarist'] (and Fanatic variant)\n- ['ethic:ethic_ecologist'] (and Fanatic variant)\n- ['ethic:ethic_industrialist'] (and Fanatic variant)\n- ['ethic:ethic_materialist'] (and Fanatic variant)\n- ['ethic:ethic_spiritualist'] (and Fanatic variant)\n- ['ethic:ethic_competitive'] (and Fanatic variant)\n- ['ethic:ethic_cooperative'] (and Fanatic variant)\n- ['ethic:ethic_elitist'] (and Fanatic variant)\n- ['ethic:ethic_pluralist'] (and Fanatic variant)\n- ['ethic:ethic_xenophile'] (and Fanatic variant)\n- ['ethic:ethic_xenophobe'] (and Fanatic variant)"
+
+	concept_tec_gestalt_ethic: "Gestalt Ethic"
+	concept_tec_gestalt_ethics: "Gestalt Ethics"
+	concept_tec_gestalt_ethic_desc: "$concept_tec_gestalt_ethics$ are ethics that gestalt consciousness empires have, empires like ['authority:concept_auth_hive_mind'] or ['authority:auth_machine_intelligence'] empires, being mutually exclusive with ['concept_tec_regular_ethics'].\n\n$concept_tec_gestalt_ethics$ consist of\n- ['ethic:ethic_gestalt_consciousness']\n- ['ethic:ethic_gestalt_empathy']\n- ['ethic:ethic_gestalt_apathy']\n- ['ethic:ethic_gestalt_preservation']\n- ['ethic:ethic_gestalt_overconsumption']\n- ['ethic:ethic_gestalt_extrospective']\n- ['ethic:ethic_gestalt_introspective']"
+	
 	#concept_tec_leader_civic: "Leader Civic"
 	#concept_tec_leader_civics: "Leader Civics"
 	#concept_tec_leader_civic_desc: "Leader civics are mutually exclusive, usually making §YLeaders§! of a specific type produce resources depending on their leader level and some other factors, while also removing the upkeep."
