--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -192,7 +192,7 @@
  # --------------- Empathic gestalt
 	tech_tec_gestalt_friendship:0 "Empathic Friendship"
 	tech_tec_gestalt_friendship_desc:0 "In a galaxy full of life and different way of sapience and sentience, our collective must remain strong and decided to house any individual who wants to join our way, or help our cause, as collaboration is the true way of progressing towards a better future."
-	TECH_UNLOCK_TEC_GESTALT_FRIENDSHIP_TITLE:0 "§HUnlocks Feature:§! Free Individual Attraction\n§HUnlocks Feature:§! £consumer_goods£ Consumer Goods Production."
+	TECH_UNLOCK_TEC_GESTALT_FRIENDSHIP_TITLE:0 "§HUnlocks Feature:§! Free Individual Attraction"
 	TECH_UNLOCK_TEC_GESTALT_FRIENDSHIP_DESC:0 "§HFree Individual Attraction§!\nOrganic xenos in empires that have a good or strong relation with the collective can migrate to our planets, if there are suitable conditions and production to sustain them.\n§HConsumer Goods Production§!\nAllows the optional replacement of Industrial production to support free individuals.\n§YGestalt empires that do not rely on consumer goods must either change the planet £district£ Designation or create a £building£ Factory on the planet for the proper production.§!"
 
  # --------------- Democratic Genemodding
