--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -614,7 +614,7 @@
 	GESTALT_ETHIC_STARTS_WITH_FRIENDSHIP:0 "§EUnlocks the §HEmpathic Friendship§! technology; this technology allows both gaining non-hivemind organic pops and producing Consumer Goods.§!"
 	GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EMay randomly gain a £pops£ §HNon gestalt pop§! from empires with good relations or in the same Federation, but they might require §Y$tec_loc_consumer_goods$§! to be sustained.§!"
 
-	TEC_TAG_GESTALT_EMPATHY_BONUS_FRIENDSHIP: "$TEC_TAG_BONUS_MECHANIC$\n- Access to the ['technology:tech_tec_gestalt_friendship'] Technology.\n- With this technology, you may randomly gain a non-['ethic:ethic_gestalt_consciousness'] §Y£pop£ Pop§! from empires with good relations or in the same Federation, if the empire can §Y$tec_loc_consumer_goods$§! sustain that population."
+	TEC_TAG_GESTALT_EMPATHY_BONUS_FRIENDSHIP: "$TEC_TAG_BONUS_MECHANIC$\n- Access to the ['technology:tech_tec_gestalt_friendship'] Technology.\n- With this technology, you may randomly gain a non-['ethic:ethic_gestalt_consciousness'] §Y£pop£ Pop§! from empires with good relations or in the same Federation, if the empire can sustain the §Y$tec_loc_consumer_goods$§! for that population."
 
 	GESTALT_ETHIC_EMPATHY:0 "§EReduces the £opinion£ Opinion penalty Gestalt consciousness normally have with other empires.§!"
 	TEC_TAG_GESTALT_EMPATHY_BONUS_OPINION: "$TEC_TAG_BONUS$ Gain §G+50§! §Y£opinion£ Opinion§! with non-['ethic:ethic_gestalt_consciousness'] Empires, countering the normal penalty."
