M-AGE # 17- UNSTABLE - Path changes implementation 5

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -764,74 +764,48 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 # /
 
 # ------------------------------------------------- Gene Ascension
- # --------------- Biological archetype traits
-	# Humanoid + mammalian
-	trait_tec_gene_archetype_mammalian:0 "TO DO"
-	trait_tec_gene_archetype_mammalian_desc:0 "§LTO DO.§!"
-
-	# Avian + reptilian
-	trait_tec_gene_archetype_saurian:0 "TO DO"
-	trait_tec_gene_archetype_saurian_desc:0 "§LTO DO.§!"
-
-	# Chitinous - Arthropoid + molluscoid
-	trait_tec_gene_archetype_chitinous:0 "TO DO"
-	trait_tec_gene_archetype_chitinous_desc:0 "§LTO DO.§!"
-
-	# Aquatic
-	trait_tec_gene_archetype_aquatic:0 "TO DO"
-	trait_tec_gene_archetype_aquatic_desc:0 "§LTO DO.§!"
-
-	# Lithoid
-	trait_tec_gene_archetype_lithoid:0 "TO DO"
-	trait_tec_gene_archetype_lithoid_desc:0 "§LTO DO.§!"
-
-	# Necroid
-	trait_tec_gene_archetype_necroid:0 "Bio-Mollecular Cleansing"
-	trait_tec_gene_archetype_necroid_desc:0 "§LTO DO.§!"
-
-	# Toxoid
-	trait_tec_gene_archetype_toxoid:0 "TO DO"
-	trait_tec_gene_archetype_toxoid_desc:0 "§LTO DO.§!"
-
-	# Building
-	building_tec_genetic_recombinator:0 "Genetic Recombinator"
-	building_tec_genetic_recombinator_plural:0 "Genetic Recombinators"
-	building_tec_genetic_recombinator_desc:0 "TO DO"
-	building_tec_genetic_recombinator_desc_genocidal:0 "TO DO"
- # /
  # -------- Building&Job
 	# Jobs working her
-	building_tec_gene_repository_effect:0 "This £building£ "
+	building_tec_regular_gene_vat:0 "Genetic Archive"
+	building_tec_regular_gene_vat_plural:0 "$building_tec_regular_gene_vat$s"
+	building_tec_regular_gene_vat_desc:0 "TO DO"
+	building_tec_regular_gene_vat_effect:0 "This £building£ "
+	building_tec_regular_gene_vat_effect_situation:0 "This £building£ "
 
-	building_tec_gene_repository_1:0 "Genetic Archive"
-	building_tec_gene_repository_1_desc:0 "TO DO"
+	building_tec_biohive_gene_vat:0 "Genetic Repository"
+	building_tec_biohive_gene_vat_plural:0 "Genetic Repositories"
+	building_tec_biohive_gene_vat_desc:0 "TO DO"
 
-	building_tec_gene_repository_1:0 "Genetic Repository"
-	building_tec_gene_repository_1_desc:0 "TO DO"
+	job_tec_gene_recombinator:0 "Geno-Tailor"
+	job_tec_gene_recombinator_plural:0 "Geno-Tailors"
+	job_tec_gene_recombinator_desc:0 "TODO ASCENSION"
+	job_tec_gene_recombinator_effect_desc:0 "TODO ASCENSION"
+	mod_job_tec_gene_recombinator_add:0 "$job_tec_gene_recombinator$ Jobs"
+	mod_job_tec_gene_recombinator_per_pop:0 "§G+1§! $job_tec_gene_recombinator$ Job per $VALUE$ Pops"
+	mod_job_tec_gene_recombinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_gene_recombinator_add£ per $VALUE$ £pop£"
 
-	job_tec_genetic_tailor:0 "Geno-Tailor"
-	job_tec_genetic_tailor_plural:0 "Geno-Tailors"
-	job_tec_genetic_tailor_desc:0 "$job_tec_cyborg_servitor_desc$"
-	job_tec_genetic_tailor_effect_desc:0 "£job_tec_genetic_tailor£ $job_tec_genetic_tailor_plural$ produce §YResources§! based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
-	mod_job_tec_genetic_tailor_add:0 "$job_tec_genetic_tailor$ Jobs"
-	mod_job_tec_genetic_tailor_per_pop:0 "§G+1§! $job_tec_genetic_tailor$ Job per $VALUE$ Pops"
-	mod_job_tec_genetic_tailor_per_pop_short:0 "\n§G+1§! £mod_job_tec_genetic_tailor_add£ per $VALUE$ £pop£"
-
-	job_tec_genetic_tailor_drone:0 "Geno-Tailor"
-	job_tec_genetic_tailor_drone_plural:0 "Geno-Tailors"
-	job_tec_genetic_tailor_drone_desc:0 "$job_tec_cyborg_servitor_desc$"
-	job_tec_genetic_tailor_drone_effect_desc:0 "£job_tec_genetic_tailor_drone£ $job_tec_genetic_tailor_drone_plural$ produce §YResources§! based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
-	mod_job_tec_genetic_tailor_drone_add:0 "$job_tec_genetic_tailor_drone$ Jobs"
-	mod_job_tec_genetic_tailor_drone_per_pop:0 "§G+1§! $job_tec_genetic_tailor_drone$ Job per $VALUE$ Pops"
-	mod_job_tec_genetic_tailor_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_genetic_tailor_drone_add£ per $VALUE$ £pop£"
+	job_tec_gene_recombinator_drone:0 "Geno-Tailor"
+	job_tec_gene_recombinator_drone_plural:0 "Geno-Tailors"
+	job_tec_gene_recombinator_drone_desc:0 "TODO ASCENSION"
+	job_tec_gene_recombinator_drone_effect_desc:0 "TODO ASCENSION"
+	mod_job_tec_gene_recombinator_drone_add:0 "$job_tec_gene_recombinator_drone$ Jobs"
+	mod_job_tec_gene_recombinator_drone_per_pop:0 "§G+1§! $job_tec_gene_recombinator_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_gene_recombinator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_gene_recombinator_drone_add£ per $VALUE$ £pop£"
 
 	job_tec_genetic_repository:0 "Geno-Repository"
 	job_tec_genetic_repository_plural:0 "Geno-Repository"
-	job_tec_genetic_repository_desc:0 "$job_tec_cyborg_servitor_desc$"
+	job_tec_genetic_repository_desc:0 "TODO ASCENSION"
 	job_tec_genetic_repository_effect_desc:0 "£job_tec_genetic_repository£ $job_tec_genetic_repository_plural$ produce §YResources§! based on the £stability£ §YPlanet designation§! and £building£ §YBoosting Buildings§!."
 	mod_job_tec_genetic_repository_add:0 "$job_tec_genetic_repository$ Jobs"
 	mod_job_tec_genetic_repository_per_pop:0 "§G+1§! $job_tec_genetic_repository$ Job per $VALUE$ Pops"
 	mod_job_tec_genetic_repository_per_pop_short:0 "\n§G+1§! £mod_job_tec_genetic_repository_add£ per $VALUE$ £pop£"
+ # /
+ # Agenda
+	council_agenda_agenda_tec_gene_recombination_name:0 "Genetic Recombination"
+	council_agenda_agenda_tec_gene_recombination_desc:0 "TODO ASCENSION"
+	council_agenda_agenda_tec_gene_recombination_effects:0 "TODO ASCENSION"
+	modifier_tec_agenda_tec_gene_recombination_finish:0 "Genetic Recombination"
+	modifier_tec_agenda_tec_gene_recombination_finish_desc:0 "$council_agenda_agenda_tec_gene_recombination_desc$"
  # /
 # /
 
