--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1072,6 +1072,9 @@
 	tec_advanced_augmentation_external:0 "§CAdvanced Augmentation - External§!"
 	tec_advanced_augmentation_deck:0 "§CAdvanced Augmentation - OS Deck§!"
 
+	tec_unregulated_augmentation_deck:0 "§CUnregulated Augmentation§!"
+	tec_reclaimed_augmentation_deck:0 "§CReclaimed Augmentation§!"
+
 	tec_only_1_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$Only one Cybernetic Mainframe can be added to this species. Developing new cybernetic advancements can allow further modifications.§!"
 	tec_only_2_cybernetic_mainframe_trait:0 "\n§R$trigger_tec_warning_red$This species has already augmented its body with a Cybernetic Mainframe.§!"
 
@@ -1204,6 +1207,10 @@
 	trait_tec_cyborg_external_worker:0 "Prosthetic Machinery"
 	trait_tec_cyborg_external_worker_desc:0 "§LMiniaturized industrial devices are integrated in the body of this species, generating a really effective way of developing basic tasks and general job output.§!"
 	trait_tec_cyborg_external_worker_effect:0 "§YTODO ASCENSION§!"
+
+	trait_tec_cyborg_external_weaponry:0 "Integrated Weaponry"
+	trait_tec_cyborg_external_weaponry_desc:0 "§LTODO ASCENSION§!"
+	trait_tec_cyborg_external_weaponry_effect:0 "§YTODO ASCENSION§!"
 
 	trait_tec_cyborg_external_aesthetic:0 "Aesthetic implants"
 	trait_tec_cyborg_external_aesthetic_desc:0 "§LBecause effectivity is not only the most important thing this species values, the degree of cosmetic and day-to-day use of prosthetics and appearance alterators is a common practice in their society.§!"
