--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -102,7 +102,9 @@
 	tec_loc_pops: "$tec_loc_pop$s"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 	tec_loc_pop_growth_icon: "£mod_pop_growth_speed£"
+
 	tec_loc_job_output: "£job£ Job Output"
+	tec_loc_organic_job_output: "£job£ Organic Job Output"
 
 	tec_loc_defense_army:0 "£defense_army£ Defense Army"
 	tec_loc_defense_armies:0 "£defense_army£ Defense Armies"
@@ -124,6 +126,7 @@
 	tec_loc_menial_output: "£job£ Menial Job Output"
 	tec_loc_specialist_output: "£job£ Specialist Job Output"
 
+	tec_loc_planet: "£planet£ Planet"
 	tec_loc_designation: "£stability£ Designation"
 	tec_loc_planet_designation: "£stability£ Planet Designation"
 
@@ -182,6 +185,8 @@
 
 	tec_loc_terraform_speed:0 "£mod_country_terraform_speed_mult£ $MOD_COUNTRY_TERRAFORM_SPEED_MULT$"
 
+	tec_loc_empire:0 "£empire£ Empire"
+
 	tec_loc_building:0 "£building£ Building"
 	tec_loc_building_plural:0 "£building£ Buildings"
 	tec_loc_building_icon:0 "£building£"
@@ -204,6 +209,7 @@
 	tec_loc_ascension_perks:0 "£unity£ Ascension Perks"
 	tec_loc_ascension_perk_plural:0 "$tec_loc_ascension_perks$"
 
+	tec_loc_species_modification: "£tec_genetics_icon£ Species Modification"
 	tec_loc_xenocytes:0 "£tec_genetics_icon£ §YXenocytes§!"
 
 	tec_loc_cannot_reproduce:0 "§RCannot Reproduce Naturally§!"
@@ -214,7 +220,8 @@
 
 	tec_blank:0 ""
 	tec_error:0 "£trigger_no£ §RERROR§!"
-	tec_temporarely_disabled: "£trigger_tec_warning£§YTEMPORARILY DISABLED§!"
+	tec_disabled_temporarely: "£trigger_tec_warning£§YTEMPORARILY DISABLED§!"
+	tec_disabled_todo: "£trigger_tec_warning£§YDISABLED - ONGOING WORK§!"
 
 	trigger_tec_warning:1 "£trigger_tec_warning£ "
 
