M-AGE # 18- UNSTABLE - Habitat rework test

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -32,6 +32,19 @@ l_english:
 	tec_building_ascension_scaling_leader_scientist:0 "\n§EFeature:§! §H£unity£ Ascended Efficiency:§!\n- Every §G5§! §Y$tec_loc_planet_ascensions$§! of this colony will provide §G+1§! additional §Y$tec_loc_leader_scientist$§!.\n\n"
  # /
 
+ # Modifiers
+	mod_tec_mega_production_mult:0 "Solar System Megastructure Output"
+
+	mod_tec_subhabitat_energy_add:0 "$tec_loc_energy$ from $tec_subhabitat_energy$s"
+	mod_tec_subhabitat_minerals_add:0 "$tec_loc_minerals$ from $tec_subhabitat_minerals$s"
+	mod_tec_subhabitat_food_add:0 "$tec_loc_food$ from $tec_subhabitat_food$s"
+	mod_tec_subhabitat_physics_research_add:0 "$tec_loc_physics$ from $tec_subhabitat_physics$s"
+	mod_tec_subhabitat_society_research_add:0 "$tec_loc_society$ from $tec_subhabitat_society$s"
+	mod_tec_subhabitat_engineering_research_add:0 "$tec_loc_engineering$ from $tec_subhabitat_engineering$s"
+	mod_tec_subhabitat_research_add:0 "$tec_loc_research_resources$ from $tec_subhabitat_sciences$s"
+	mod_tec_subhabitat_all_add:0 "All resources from $tec_subhabitat_standard$s"
+ # /
+
  # Job icons
 	# Admin Swaps
 	job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
