--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -189,7 +189,7 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 	requires_no_gas_giant:0 "$TRIGGER_FAIL$Cannot build around Gas Giants."
 	requires_habitable_planet:0 "$TRIGGER_FAIL$Due to the characteristics of this kind of orbital arcology, cannot be build around non-habitable or uncolonized planets."
 
-	modifier_tec_mega_scaling:0 "Megastructure Scaling"
+	modifier_tec_mega_scaling:0 "From Megastructure Logistics"
 	modifier_tec_mega_scaling_desc:0 "a"
 	modifier_tec_mega_scaling_tooltip:0 "a"
 # /
@@ -319,38 +319,51 @@ unmodifier_tec_glorious_fleet:0 "Woe to the Vanquished!"
 # /
 # --------------- Sub-Habitats
  # Types
+	tec_requires_habitat_central_complex_colonized:0 "$TRIGGER_FAIL$§RRequires a colonized $habitat_central_complex$ present in the system§!"
+
+	TEC_SUBHABITAT_NAME: "[FROM.from.planet.GetName] Sub-Habitat"
+
 	tec_subhabitat_standard:0 "Proxy Sub-Habitat"
 	tec_subhabitat_standard_DESC:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_standard_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nThe §YSub-Station§! will adapt its §YType and Production§! to the §Y$tec_loc_deposits$§! of the celestial body where they are constructed, or future deposits when created."
 
+	TEC_SUBHABITAT_ENERGY_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_energy$"
 	tec_subhabitat_energy:0 "Generator Sub-Habitat"
 	tec_subhabitat_energy_DESC:0 "$tec_subhabitat_energy$"
 	tec_subhabitat_energy_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nAllowing the connection and storage of massive dynamos and batteries, It is specialized in §Y$tec_loc_energy$§! production."
 
+	TEC_SUBHABITAT_MINERALS_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_minerals$"
 	tec_subhabitat_minerals:0 "Mining Sub-Habitat"
 	tec_subhabitat_minerals_DESC:0 "$tec_subhabitat_minerals$"
 	tec_subhabitat_minerals_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nServing as anchorage for resource extraction and processing, it is specialized in §Y$tec_loc_minerals$§! production."
 
+	TEC_SUBHABITAT_EXTRACTION_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_extraction$"
 	tec_subhabitat_extraction:0 "Extraction Sub-Habitat"
 	tec_subhabitat_extraction_DESC:0 "$tec_subhabitat_standard$"
 	tec_subhabitat_extraction_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nOrbiting a resource-rich celestial body, it is specialized in §Y$tec_loc_energy$§! and §Y$tec_loc_minerals$§! production."
 
+	TEC_SUBHABITAT_FOOD_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_food$"
 	tec_subhabitat_food:0 "Hydroponic Sub-Habitat"
 	tec_subhabitat_food_DESC:0 "$tec_subhabitat_food$"
 	tec_subhabitat_food_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nFilled with massive hydroponic towers, it is specialized in §Y$tec_loc_food$§! production."
 
+	TEC_SUBHABITAT_PHYSICS_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_physics$"
 	tec_subhabitat_physics:0 "Physics Sub-Habitat"
 	tec_subhabitat_physics_DESC:0 "$tec_subhabitat_physics$"
 	tec_subhabitat_physics_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art antigrav labs, it is specialized in §Y$tec_loc_physics$§! production."
 
+	TEC_SUBHABITAT_SOCIETY_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_society$"
 	tec_subhabitat_society:0 "Observatory Sub-Habitat"
 	tec_subhabitat_society_DESC:0 "$tec_subhabitat_society$"
 	tec_subhabitat_society_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art development labs, it is specialized in §Y$tec_loc_society$§! production."
 
+	TEC_SUBHABITAT_ENGINEERING_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_engineering$"
 	tec_subhabitat_engineering:0 "Engineering Sub-Habitat"
 	tec_subhabitat_engineering_DESC:0 "$tec_subhabitat_engineering$"
 	tec_subhabitat_engineering_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nEquipped with several state-of-the-art technical labs, it is specialized in §Y$tec_loc_society$§! production."
 
+
+	TEC_SUBHABITAT_SCIENCE_NAME: "[FROM.from.planet.GetName] $tec_subhabitat_science$"
 	tec_subhabitat_science:0 "Scientific Sub-Habitat"
 	tec_subhabitat_science_DESC:0 "$tec_subhabitat_science$"
 	tec_subhabitat_science_MEGASTRUCTURE_DETAILS:0 "A massive station tied to a main §Y$habitat_complex$§!, serving as operative proxy of the system central habitat.\nLocated in a particular point of interest for scientific development, it is specialized in §Y$tec_loc_research_resources$§! production."
