--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1024,10 +1024,10 @@ l_english:
  # /
 
  # ------------------------------------------------- Habitats
-	district_tec_hab_logistics:0 "Orbital Logistics District"
-	district_tec_hab_logistics_plural:0 "$district_tec_hab_extraction$s"
-	district_tec_hab_logistics_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
-	district_tec_hab_logistics_effect:0 "This $tec_loc_district$ provide jobs that increase §Y$tec_loc_megastructure$§! resource yield."
+	district_tec_hab_logistic:0 "Orbital Logistics District"
+	district_tec_hab_logistic_plural:0 "$district_tec_hab_extraction$s"
+	district_tec_hab_logistic_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
+	district_tec_hab_logistic_effect:0 "This $tec_loc_district$ provide jobs that increase the system's §YMegastructure§! resource yield.\n\n§Y$tec_loc_warning$ Only productive megastructures, which produce direct resources, benefit from this effect.§!"
 
 	# Old habitat districts
 	district_tec_hab_extraction:0 "Orbital Extraction District"
